--- a/css/styles.css
+++ b/css/styles.css
@@ -177,6 +177,16 @@ h1, h2, h3, h4, h5, h6 {
     text-align: center;
 }
 
+.section--clients {
+    background: url("../images/clients/background.png") no-repeat
+    center;
+    background-size: cover;
+}
+
+.section--no-margin-bottom {
+    margin-bottom: 0;
+}
+
 .section__header {
     width: 100%;
     max-width: 960px;
@@ -456,6 +466,10 @@ h1, h2, h3, h4, h5, h6 {
     background: #f8f8f8;
 }
 
+.quote__slider--white {
+    background-color: white;
+}
+
 .quote__slider-inner {
     position: relative;
     display: flex;
@@ -487,6 +501,13 @@ h1, h2, h3, h4, h5, h6 {
 .quote__slider-icon {
     margin: 0 auto;
     padding: 30px;
+}
+
+.quote__slider-second-icon {
+    width: 100%;
+    max-width: 210px;
+    height: auto;
+    max-height: 210px;
 }
 
 .quote__slider-text {
@@ -551,7 +572,6 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 /* Team */
-
 .team {
     width: 100%;
     display: flex;
@@ -560,4 +580,182 @@ h1, h2, h3, h4, h5, h6 {
 
 .team__item {
     flex-basis: 31%;
+}
+
+.team__wrapper {
+    /*position: relative;*/
+    background-color: #95e1d3;
+}
+
+.team__img {
+    position: relative;
+    background: linear-gradient(to bottom, yellow, orange);
+    transition: transform 0.1s linear;
+}
+
+.team__img img{
+    display: block;
+}
+
+.team__img:hover img {
+    opacity: 0.1;
+}
+
+.team__img:hover {
+    transform: translate3d(-10px, -10px, 0);
+}
+
+.team__icons {
+    transition: opacity 0.1s linear;
+    position: absolute;
+    left: 60%;
+    top: 50%;
+    z-index: 2;
+    transform: translate3d(-68%, 0, 0);
+}
+
+.team__item:hover .team__icons {
+    opacity: 1;
+}
+
+.team__text {
+    line-height: 1;
+    margin-top: 30px;
+}
+
+.team__name {
+    text-transform: uppercase;
+}
+
+.team__position {
+    font-style: italic;
+    font-weight: 300;
+}
+
+.team__icons {
+    display: flex;
+    opacity: 0;
+    transition: opacity 0.1s linear;
+}
+
+.team__icon-item {
+    position: relative;
+    background-color: #fce38a;
+    color: #f38181;
+    width: 55px;
+    height: 55px;
+}
+
+.team__icon-item:nth-child(1),
+.team__icon-item:nth-child(2),
+.team__icon-item:nth-child(3) {
+    border-right: 1px solid #f9bd87;
+}
+
+.team__icon-item a i {
+    color: #f38181;
+}
+
+.team__icon-link {
+    position: absolute;
+    left: 40%;
+    top: 30%;
+    z-index: 2;
+}
+
+.team__icon-item:hover {
+    background-color: #f38181;
+}
+
+.team__icon-item:hover a i {
+    color: #fff;
+}
+
+/* Hipster */
+
+.hipster__icons {
+    background: #f8f8f8;
+}
+
+.hipster__icons-inner {
+    width: 100%;
+    margin: 0 auto;
+}
+
+.hipster__icon-itself {
+    padding: 60px 0;
+}
+
+.hipster__icon-itself img {
+    width: 100%;
+    max-width: 1200px;
+}
+
+/* Work */
+
+.work {
+    width: 100%;
+    display: flex;
+}
+
+.work__column {
+
+}
+
+.work__item {
+    position: relative;
+    background: linear-gradient(to bottom, yellow, orange);
+}
+
+.work__img {
+    display: block;
+    width: 100%;
+    height: auto;
+    transition: opacity 0.1s linear;
+}
+
+.work__img:hover {
+    opacity: 0.1;
+}
+
+.work__item:hover .work__info {
+    opacity: 1;
+}
+
+.work__info {
+    font-size: 14px;
+    color: #fff;
+    width: 100%;
+    position: absolute;
+    top: 50%;
+    left: 0;
+    transform: translate3d(0, -50%, 0);
+    opacity: 0;
+    transition: opacity 0.1s linear;
+}
+
+.work__img-inner-header {
+    margin-top: 5px;
+    text-transform: uppercase;
+}
+
+.work__img-dumb-text {
+    padding: 0;
+    margin-top: 5px;
+    font-style: italic;
+    font-weight: 300;
+}
+
+/* Clients */
+
+.clients {
+    width: 100%;
+    height: auto;
+    display: flex;
+    flex-wrap: wrap;
+    padding-bottom: 133px;
+}
+
+.clients__item {
+    flex-basis: 50%;
 }
