--- a/second-task/styles.css
+++ b/second-task/styles.css
@@ -30,10 +30,9 @@ a {
 }
 
 /* Header */
-
 .header__row {
     max-height: 22px;
-    haight: 100%;
+    height: 100%;
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
@@ -106,16 +105,11 @@ a {
 
 /* Accountant */
 .accountant__container {
-    /*display: flex;*/
-    /*flex-direction: column;*/
-    /*flex-wrap: wrap;*/
-    /*align-items: center;*/
-    /*margin: 75px auto;*/
-
+    position: relative;
 }
-
 .accountant {
-    margin: 75px 0;
+    overflow: hidden;
+    margin: 75px 0 0 0;
     background: linear-gradient(0deg, rgba(0,0, 0, 0.6), rgba(0, 0, 0, 0.6)), url(./assets/img/accountant/01.png)no-repeat center;
     background-size: cover;
     max-height: 100%;
@@ -136,23 +130,83 @@ a {
 }
 
 .accountant__presentations {
-    display: block !important;
-}
-
-.accountant__presentations {
-    max-width: 270px;
-    max-height: 60px;
-    width: 100%;
-    height: 100%;
-}
-
-.accountant__presentations {
-    background-color: blue !important;
+    display: flex;
+    position: absolute;
+    left: 0;
+    top: 367px;
+    z-index: 1000;
+    background-color: #005FA3 !important;
+    text-align: center;
+    justify-content: center;
+    padding: 19px 18px;
 }
 
 .accountant__presentations a {
     color: white !important;
     text-decoration: none;
-    text-align: center;
-    padding: 25px;
+    height: 22px;
+    width: 234px;
+    font-size: 18px;
+    line-height: 24.84px;
+}
+
+/* Dots */
+
+.dots {
+    position: absolute;
+    left: 0;
+    top: 547px;
+    display: flex;
+    flex-direction: row;
+}
+
+.dots__dot {
+    width: 10px;
+    height: 10px;
+    border-radius: 50%;
+    background: #FFFFFF;
+    margin: 0 25px;
+    opacity: 0.4;
+    cursor: pointer;
+    transition: opacity 0.5s ease-out;
+}
+
+.dots__dot:first-child {
+    margin-left: 0 !important;
+}
+
+.dots__dot:last-child {
+    margin-right: 0 !important;
+}
+
+.dots__dot.active, .dots__dot:hover {
+    opacity: 1;
+}
+
+/* Arrows */
+.arrows {
+    position: absolute;
+    display: block;
+    left: 1395px;
+    bottom: 113px;
+    z-index: 10002;
+    width: 100%;
+    max-width: 120px;
+    height: auto;
+    max-height: 60px;
+    background-color: #FFFFFF;
+}
+
+.arrows__arrow {
+    opacity: 0.2;
+    width: 50%;
+    max-width: 60px;
+    height: 50%;
+    max-height: 60px;
+    cursor: pointer;
+    background-color: #FFFFFF;
+}
+
+.arrows__arrow:nth-child(2) {
+    opacity: 0.4;
 }
