--- a/second-task/styles.css
+++ b/second-task/styles.css
@@ -1,3 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=Merriweather&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Lato&family=Merriweather&display=swap');
+
 *, *:after, *:before {
     box-sizing: border-box;
 }
@@ -5,6 +8,7 @@
 body {
     margin: 0;
     padding: 0;
+    font-family: Merriweather, Arial, sans-serif;
 }
 
 .title {
@@ -139,6 +143,7 @@ a {
     text-align: center;
     justify-content: center;
     padding: 19px 18px;
+    transition: all 0.5s ease-in-out;
 }
 
 .accountant__presentations a {
@@ -150,12 +155,22 @@ a {
     line-height: 24.84px;
 }
 
-/* Dots */
+.accountant__presentations:hover {
+    border-radius: 15px;
+}
 
-.dots {
+/*Accountant bottom */
+.accountant__bottom {
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
     position: absolute;
-    left: 0;
     top: 547px;
+    padding: 0;
+}
+
+/* Dots */
+.dots {
     display: flex;
     flex-direction: row;
 }
@@ -183,30 +198,615 @@ a {
     opacity: 1;
 }
 
+
 /* Arrows */
 .arrows {
-    position: absolute;
-    display: block;
-    left: 1395px;
-    bottom: 113px;
-    z-index: 10002;
-    width: 100%;
-    max-width: 120px;
-    height: auto;
+    position: relative;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    margin: -30px 0 0 0;
+    width: 120px;
+    height: 60px;
     max-height: 60px;
-    background-color: #FFFFFF;
 }
 
 .arrows__arrow {
+    position: relative;
     opacity: 0.2;
-    width: 50%;
-    max-width: 60px;
-    height: 50%;
-    max-height: 60px;
+    width: 60px;
+    height: 60px;
     cursor: pointer;
     background-color: #FFFFFF;
 }
 
 .arrows__arrow:nth-child(2) {
     opacity: 0.4;
+}
+
+.arrows__arrow:nth-child(1):after {
+    position: absolute;
+    content: "";
+    display: block;
+    left: 41%;
+    top: 36%;
+    z-index: 10000001;
+    border-left: 3px solid black;
+    border-top: 3px solid black;
+    width: 18px;
+    height: 18px;
+    transform: rotate(-45deg);
+}
+
+.arrows__arrow:nth-child(2):after {
+    position: absolute;
+    content: "";
+    display: block;
+    border-left: 3px solid black;
+    border-top: 3px solid black;
+    width: 18px;
+    height: 18px;
+    transform: rotate(135deg);
+    left: 34%;
+    top: 38%;
+    z-index: 10000001;
+}
+
+/* Dots blue */
+.dots__dot-blue {
+    background: #005FA3;
+}
+
+/* Arrows blue */
+.arrows__arrow-blue {
+    background: #005FA3;
+}
+
+.arrows__arrow-blue:last-child {
+    opacity: 1;
+}
+
+.arrows__arrow-blue:first-child {
+    opacity: 0.5;
+}
+
+.arrows__reviews {
+    margin-right: 200px;
+}
+
+/* Suptitle */
+.suptitle {
+    font-family: Lato, Arial, serif !important;
+    font-weight: 600;
+    font-size: 24px;
+    line-height: 33.12px;
+    color: #BDBDBD;
+    letter-spacing: 0.15px;
+}
+
+/* Main title*/
+.main-title {
+    font-family: Merriweather, Arial, sans-serif;
+    font-style: normal;
+    font-weight: 900;
+    font-size: 48px;
+    line-height: 69px;
+    margin: 10px 0 50px 0;
+    color: #333333;
+}
+
+/* Services */
+.services {
+    background: #EBEBEB;
+    padding: 70px 0;
+}
+
+.services__accountant {
+    display: flex;
+    flex-direction: column;
+}
+
+.services__row {
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+}
+
+.services__row {
+    margin: 0 0 20px 0;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+}
+
+.services__item {
+    flex-basis: 30%;
+    max-width: 360px;
+    height: auto;
+    position: relative;
+    background-image: url("./assets/img/services/01.png");
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+    margin: 0 15px;
+    transition: opacity 0.5s ease-in-out;
+}
+
+.services__item:nth-child(1), .services__item:nth-child(2), .services__item:nth-child(3) {
+    margin-top: 0;
+}
+
+.services__item:hover {
+    background-color: #005FA3;
+}
+
+.services__item:nth-child(1), .services__item:nth-child(4) {
+    margin-left: 0;
+}
+
+.services__image {
+    background: linear-gradient(0deg, rgba(0, 95, 163, 0.65), rgba(0, 95, 163, 0.65));
+    transition: opacity 0.5s linear;
+}
+
+.services__image img {
+    width: 100%;
+    height: auto;
+    max-width: 350px;
+    display: block;
+}
+
+.services__image:hover img {
+    opacity: 0.3;
+}
+
+.services__accountant-services {
+    font-family: Lato, Arial,serif;
+    color: white;
+    position: absolute;
+    font-size: 24px;
+    line-height: 30px;
+    width: 187px;
+    height: 54px;
+    left: 30px;
+    bottom: 30px;
+    z-index: 10001;
+    cursor: pointer;
+}
+
+/* About */
+.about {
+    background-color: #FFFFFF;
+    padding: 75px 0;
+}
+
+.about__row {
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+    width: 100%;
+    justify-content: space-between;
+}
+
+.about__company {
+    font-family: Merriweather, Arial, sans-serif;
+    font-weight: 900;
+    font-style: normal;
+    font-size: 48px;
+    line-height: 69px;
+    width: 100%;
+    max-width: 347px;
+}
+
+.about__company span {
+    display: block;
+    color: blue;
+}
+
+.about__lorem {
+    width: 100%;
+    max-width: 445px;
+}
+
+.about__lorem p {
+    font-family: Lato, serif;
+    font-weight: 300;
+    font-style: normal;
+    font-size: 18px;
+    line-height: 25px;
+}
+
+.about__deal-row {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    width: 100%;
+    max-width: 540px;
+    margin: 0 0 30px 0;
+}
+
+.about__deal-row:last-child {
+    margin-bottom: 0;
+}
+
+.about__deal-square {
+    position: relative;
+    width: 255px;
+    height: 255px;
+    color: black;
+    background-color: #EBEBEB;
+    margin: 0 15px 0 0;
+}
+
+.about__deal-square:nth-child(2n) {
+    margin: 0 0 0 15px;
+}
+
+.about__deal-square__active, .about__deal-square__active a {
+    color: white;
+    background-color: #005FA3;
+}
+
+.about__number {
+    position: absolute;
+    left: 40px;
+    top: 30px;
+    font-family: Lato, serif;
+    font-size: 55px;
+    font-style: normal;
+    font-weight: 900;
+    line-height: 66px;
+    letter-spacing: 0.1em;
+    text-align: left;
+}
+
+.about__big-deals {
+    position: absolute;
+    left: 40px;
+    top: 114px;
+    width: 107px;
+    font-family: Lato, serif;
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 18px;
+    letter-spacing: 0em;
+    text-align: left;
+}
+
+.about__all-cases {
+    position: absolute;
+    left: 40px;
+    top: 198px;
+    font-family: Lato, serif;
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 17px;
+    letter-spacing: 0em;
+    text-align: left;
+}
+
+/* Clients */
+.clients {
+    background-color: #EBEBEB;
+    padding: 70px 0 100px 0;
+}
+
+.clients-container {
+    position: relative;
+}
+
+.clients_row {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+}
+
+.clients__item {
+    display: flex;
+    flex-direction: row;
+    flex-basis: 255px;
+    flex-grow: 1;
+    flex-shrink: 0;
+}
+
+.clients__image img{
+    width: 100%;
+    height: auto;
+    max-width: 40px;
+    display: block;
+}
+
+.clients__microsoft {
+    padding: 0 0 0 15px;
+    font-family: Lato, serif;
+    color: #2b2929;
+    line-height: normal;
+    font-size: 30px;
+}
+
+.clients__bottom {
+    margin: 150px 0 0 0;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    width: 100%;
+}
+
+/* Reviews */
+.reviews {
+    padding: 75px 0 120px 0;
+}
+
+.review-container {
+    position: relative;
+}
+
+.reviews__content {
+    background: #EBEBEB;
+    width: 100%;
+    max-width: 1110px;
+    height: 320px;
+}
+
+.reviews__content {
+    width: 100%;
+    max-width: 920px;
+    padding: 45px 95px 0 95px;
+    font-family: Lato, serif;
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 300;
+    line-height: 25px;
+    letter-spacing: 0em;
+    text-align: left;
+}
+
+.reviews__client {
+    display: flex;
+    justify-content: left;
+    width: 100%;
+    max-width: 340px;
+}
+
+.reviews__image img {
+    width: 100%;
+    height: auto;
+    max-width: 80px;
+    display: block;
+    border-radius: 50%;
+}
+
+.reviews__flex {
+    display: flex;
+    flex-direction: column;
+    align-self: center;
+    margin: 0 0 0 20px;
+}
+
+.reviews__name {
+    font-family: Lato, Arial, sans-serif;
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: 25px;
+    letter-spacing: 0;
+    text-align: left;
+}
+
+.reviews__director {
+    font-family: Lato, Arial, sans-serif;
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 19px;
+    letter-spacing: 0;
+    text-align: left;
+}
+
+.reviews__bottom {
+    margin: 150px 0 0 0;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    width: 100%;
+}
+
+/* Feedback */
+.feedback {
+    background-image: url("./assets/img/feedback/01.png");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    height: auto;
+    width: 100%;
+    padding: 122px 0 150px 0;
+    color: white;
+}
+
+.feedback__row {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
+
+.feedback__column {
+    flex-basis: 50%;
+    text-align: left;
+}
+
+.feedback__column label {
+    font-family: Lato, Arial, sans-serif;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 22px;
+    letter-spacing: 0;
+    text-align: left;
+
+}
+
+.feedback__title {
+    font-family: Merriweather, Arial, sans-serif;
+    font-size: 48px;
+    font-style: normal;
+    font-weight: 900;
+    line-height: 69px;
+    letter-spacing: 0;
+    text-align: left;
+    margin-bottom: 60px;
+}
+
+.feedback__text {
+    width: 100%;
+    max-width: 445px;
+    font-family: Lato, Arial, sans-serif;
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 300;
+    line-height: 25px;
+    letter-spacing: 0;
+    text-align: left;
+    margin-bottom: 60px;
+}
+
+.feedback__connection {
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+    justify-content: space-between;
+    width: 100%;
+    max-width: 450px;
+}
+
+.feedback__connection-column {
+    display: inline-flex;
+}
+
+.feedback__connection-text {
+    align-self: center;
+    margin-left: 10px;
+}
+
+.feedback__column_first-row .feedback__name label, .feedback__column_first-row .feedback__last-name label,
+.feedback__column_first-row .feedback__message label {
+    display: block;
+}
+
+.feedback__column_first-row {
+    display: flex;
+    justify-content: space-between;
+    flex-direction: row;
+    margin-bottom: 40px;
+}
+
+.feedback__name, .feedback__last-name {
+    width: 100%;
+    max-width: 255px;
+    display: flex;
+    flex-direction: column;
+}
+
+.feedback__name::placeholder, .feedback__last-name::placeholder,
+.feedback__message::placeholder
+{
+    font-family: Lato, Arial, sans-serif !important;
+    font-size: 21px;
+    font-style: normal;
+    font-weight: 300;
+    line-height: 29px;
+    letter-spacing: 0;
+    text-align: left;
+}
+
+.feedback__name input[type="text"], .feedback__last-name input[type="text"]{
+    color: white;
+    background: transparent;
+    margin: 15px 0;
+    border-bottom: 1px solid #FFFFFF;
+    border-top: none;
+    border-left: none;
+    border-right: none;
+}
+
+.feedback__message textarea {
+    color: white;
+    background: transparent;
+    resize: none;
+    border-bottom: 1px solid #FFFFFF;
+    border-top: none;
+    border-left: none;
+    border-right: none;
+}
+
+.feedback__message textarea:focus {
+    overflow: scroll;
+}
+
+.feedback__message {
+    display: flex;
+    flex-direction: column;
+}
+
+.feedback__message label {
+    margin-bottom: 15px;
+}
+
+.feedback__button {
+    width: 100%;
+    height: 100%;
+    max-height: 60px;
+    max-width: 270px;
+    margin: 50px 0 0 auto;
+    text-align: center;
+}
+
+.feedback__button a:hover {
+    border-radius: 10px;
+}
+
+.feedback__button a{
+    text-decoration: none;
+    color: white;
+    width: 100%;
+    height: auto;
+    background: #005FA3;
+    padding: 19px 18px;
+    float: right;
+    transition: all 0.3s linear;
+}
+
+.clear-float {
+    clear: both;
+}
+
+/* Footer */
+.footer {
+    background: white;
+    padding: 40px 0;
+}
+
+.footer__row {
+    display: flex;
+    justify-content: space-between;
+}
+
+.footer__column {
+    flex-basis: 50%;
+}
+
+.footer__column p {
+    font-family: Lato, Arial, sans-serif;
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 300;
+    line-height: 19px;
+    letter-spacing: 0em;
+    text-align: left;
+}
+
+.footer__column:last-child p {
+    text-align: right;
 }
