--- a/first-task/styles.css
+++ b/first-task/styles.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
+
 *, *:after, *:before {
     box-sizing: border-box;
 }
@@ -61,45 +63,66 @@ body {
 .header-second {
     background-color: black;
     color: white;
-    height: 56px;
+    height: auto;
+    padding: 20px 0;
 }
 
-.header-second__inner {
+.header-second__row {
     display: flex;
     justify-content: space-between;
 }
 
-.header-second__container {
+.header-second__company {
+    display: flex;
+    flex-basis: 33%;
+}
+
+.header-second__first img {
     width: 100%;
-    max-width: 1110px;
+    height: auto;
+    max-width: 160px;
 }
 
-.header-second__inner-column {
-    display: flex;
-    flex: 1 1 50%;
-}
-
-.header-second__inner-first-column {
-    display: flex;
-    justify-content: space-between;
-}
-
-.header-second__inner-first-column-img {
+.header-second__horizontal {
+    width: 1px;
     height: 46px;
-    width: 160px;
+    background: #FFFFFF;
+    margin: 0 25px;
 }
 
-.header-second__inner-company {
-    flex: 1 1 auto;
+.header-second__second {
+    align-self: center;
+    display: inline-flex;
 }
 
-.header-second__inner-offices {
-    flex: 1 1 auto;
-    display: flex;
-    align-items: center;
-}
-.header-second__inner-offices-img {
-    width: 25px;
+.header-second__second img{
+    width: 100%;
     height: 25px;
+    max-width: 25px;
+    align-self: center;
 }
 
+.header-second__second p {
+    font-family: Roboto, Arial, sans-serif;
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 16px;
+    letter-spacing: 0.05em;
+    text-align: left;
+    display: inline-block;
+    align-self: center;
+    margin: 0 0 0 15px;
+}
+
+.header-second__nav {
+    display: flex;
+    justify-content: flex-end;
+    flex: 1 0 auto;
+    align-self: center;
+}
+
+.header-second__element {
+    text-transform: uppercase;
+    margin: 0 15px;
+}
