--- a/first-task/styles.css
+++ b/first-task/styles.css
@@ -125,4 +125,58 @@ body {
 .header-second__element {
     text-transform: uppercase;
     margin: 0 15px;
+    text-decoration: none;
+    color: white;
+}
+
+/* Transportations */
+.transportations {
+    padding: 200px 0 50px 0;
+    width: 100%;
+    height: auto;
+    background-image: url("./assets/img/transportations/01.png");
+    background-size: cover;
+    background-repeat: no-repeat;
+    color: white;
+}
+
+.transportations__main {
+    width: 100%;
+    height: auto;
+    max-width: 920px;
+    max-height: 245px;
+    border: 1px solid gold;
+    margin: 0 auto;
+    padding: 20px 40px;
+}
+
+.transportations__header {
+    font-family: Roboto, Arial, sans-serif;
+    font-size: 64px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 75px;
+    letter-spacing: 0.05em;
+    text-align: center;
+}
+
+.transportations__text {
+    font-family: Roboto, Arial, sans-serif;
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 28px;
+    letter-spacing: 0;
+    text-align: center;
+    margin: 20px 70px;
+}
+
+.transportations__mouse {
+    display: block;
+    width: 30px;
+    height: 30px;
+    opacity: 0.8;
+    text-align: center;
+    margin: 200px auto 0 auto;
+    cursor: pointer;
 }
