--- a/first-task/styles.css
+++ b/first-task/styles.css
@@ -18,7 +18,7 @@ body {
 
 /* Header */
 .header {
-    background-color: gold;
+    background: #C8A35F;
     width: 100%;
     color: white;
 }
@@ -180,3 +180,143 @@ body {
     margin: 200px auto 0 auto;
     cursor: pointer;
 }
+
+/* Europe */
+
+.europe {
+    background-color: #2b2929;
+    position: relative;
+    padding: 150px 0;
+    max-height: 561px;
+}
+
+.europe__left {
+    position: absolute;
+    width: 39%;
+    height: 100%;
+    max-width: 755px;
+    max-height: 561px;
+    left: 0;
+    top: 0;
+    bottom: 0;
+    background: #393F47;
+    z-index: 5;
+}
+
+.europe__right {
+    position: absolute;
+    width: 39%;
+    height: 100%;
+    max-width: 755px;
+    max-height: 561px;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    background: #393F47;
+    z-index: 5;
+}
+
+.europe__block {
+    position: relative;
+    background-color: #C8A35F;
+    width: 90px;
+    height: 6px;
+    display: block;
+    z-index: 10;
+}
+
+.europe__row {
+    margin: 30px 0 0 0;
+    position: relative;
+    display: flex;
+    justify-content: space-between;
+    z-index: 10;
+}
+
+.europe__column:first-child {
+    flex-basis: 100%;
+    max-width: 450px;
+}
+
+.europe__column:last-child {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    margin: 0 50px 0 0;
+}
+
+.europe__title {
+    font-family: Roboto, Arial, sans-serif;
+    font-size: 40px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 49px;
+    letter-spacing: 0.05em;
+    text-align: left;
+    color: white;
+    text-transform: uppercase;
+    margin: 0 0 20px 0;
+    max-width: 385px;
+    width: 100%;
+}
+
+.europe__text {
+    font-family: Roboto, Arial, sans-serif;
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 28px;
+    letter-spacing: 0;
+    text-align: left;
+    color: white;
+    margin: 0 0 20px 0;
+    max-width: 385px;
+    width: 100%;
+}
+
+.europe__button {
+    width: 220px;
+    height: 55px;
+    color: white;
+    background-color: #C8A35F;
+    display: flex;
+    justify-content: center;
+    cursor: pointer;
+    transition: all 0.5s linear;
+}
+
+.europe__button:hover {
+    background-color: gold;
+    border-radius: 10px;
+}
+
+.europe__button a {
+    align-self: center;
+    color: white;
+    text-decoration: none;
+}
+
+.europe__arrows {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    width: 140px;
+}
+
+.europe__arrow-text {
+    font-family: Roboto, Arial, sans-serif;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 25px;
+    letter-spacing: 0.1em;
+    text-align: center;
+    text-transform: uppercase;
+    color: #C8A35F;
+}
+
+.europe__top, .europe__bottom {
+    display: flex;
+    justify-content: space-between;
+}
+
