--- a/first-task/styles.css
+++ b/first-task/styles.css
@@ -16,6 +16,32 @@ body {
     margin: 0 auto;
 }
 
+/* Title */
+.title {
+    font-family: Roboto, Arial, sans-serif;
+    font-size: 40px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 49px;
+    letter-spacing: 0.05em;
+    text-align: left;
+    color: white;
+    text-transform: uppercase;
+    margin: 0 0 20px 0;
+    max-width: 385px;
+    width: 100%;
+}
+
+/* Block */
+.block {
+    position: relative;
+    background-color: #C8A35F;
+    width: 90px;
+    height: 6px;
+    display: block;
+    z-index: 10;
+}
+
 /* Header */
 .header {
     background: #C8A35F;
@@ -182,9 +208,8 @@ body {
 }
 
 /* Europe */
-
 .europe {
-    background-color: #2b2929;
+    background-color: #2F343A;
     position: relative;
     padding: 150px 0;
     max-height: 561px;
@@ -216,15 +241,6 @@ body {
     z-index: 5;
 }
 
-.europe__block {
-    position: relative;
-    background-color: #C8A35F;
-    width: 90px;
-    height: 6px;
-    display: block;
-    z-index: 10;
-}
-
 .europe__row {
     margin: 30px 0 0 0;
     position: relative;
@@ -243,21 +259,6 @@ body {
     flex-direction: row;
     justify-content: space-between;
     margin: 0 50px 0 0;
-}
-
-.europe__title {
-    font-family: Roboto, Arial, sans-serif;
-    font-size: 40px;
-    font-style: normal;
-    font-weight: 700;
-    line-height: 49px;
-    letter-spacing: 0.05em;
-    text-align: left;
-    color: white;
-    text-transform: uppercase;
-    margin: 0 0 20px 0;
-    max-width: 385px;
-    width: 100%;
 }
 
 .europe__text {
@@ -301,6 +302,7 @@ body {
     flex-direction: column;
     justify-content: space-between;
     width: 140px;
+    cursor: pointer;
 }
 
 .europe__arrow-text {
@@ -320,3 +322,283 @@ body {
     justify-content: space-between;
 }
 
+/* Service */
+.service {
+    padding: 100px 0;
+    background-color: #2F343A;
+}
+
+.service__block {
+    position: relative;
+    background-color: #C8A35F;
+    width: 90px;
+    height: 6px;
+    display: block;
+    z-index: 10;
+}
+
+.service__title {
+    margin: 35px 0;
+}
+
+.service__row {
+    display: flex;
+    justify-content: space-between;
+}
+
+.service__item {
+    background: #393F47;
+    flex-basis: 25%;
+    max-width: 284px;
+    height: 180px;
+    color: white;
+    position: relative;
+    border-top: 1px solid #2F343A;
+    border-left: 1px solid #2F343A;
+    border-right: 1px solid #2F343A;
+    border-bottom: 3px solid #2F343A;
+    transition: all 0.5s ease-in-out;
+}
+
+.service__svg {
+    width: 60px;
+    height: 60px;
+    color: inherit;
+    position: absolute;
+    z-index: 5;
+    left: 111px;
+    top: 50px;
+    border-radius: 50%;
+    background-color: #393F47;
+    text-align: center;
+}
+
+.service__svg svg {
+    margin: 15px 0 0 0;
+    background-color: #393F47;
+    fill: white;
+}
+
+.service__item:hover {
+    background-color: #C8A35F;
+    color: black;
+    cursor: pointer;
+}
+
+.service__item:hover .service__svg svg {
+    background-color: white;
+    fill: black;
+}
+
+.service__item:hover .service__svg svg path {
+    fill: black;
+}
+
+.service__item:hover .service__svg {
+    background-color: #fff;
+    fill: #2b2929;
+}
+
+.service__text {
+    position: absolute;
+    font-family: Roboto, Arial, sans-serif;
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 22px;
+    letter-spacing: 0.05em;
+    text-align: center;
+    color: inherit;
+    z-index: 5;
+    left: 60px;
+    bottom: 30px;
+    text-transform: uppercase;
+}
+
+/* About */
+.about {
+    background-color: #2F343A;
+    position: relative;
+    padding: 100px 0 200px 0;
+}
+
+.about__rect {
+    position: absolute;
+    width: 410px;
+    height: 482px;
+    background: #393F47;
+    left: 570px;
+    top: 30px;
+    z-index: 5;
+}
+
+.about__title {
+    margin: 35px 0;
+}
+
+.about__row {
+    position: relative;
+    z-index: 10;
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+}
+
+.about__column {
+    flex-basis: 50%;
+    flex-grow: 1;
+    flex-shrink: 0;
+}
+
+.about__text {
+    font-family: Roboto, Arial, sans-serif;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 23px;
+    letter-spacing: 0;
+    text-align: left;
+    color: white;
+    width: 100%;
+    max-width: 445px;
+}
+
+.about__inner-row {
+    display: flex;
+}
+
+.about__inner-block {
+    background-color: white;
+    color: black;
+    width: 100%;
+    max-width: 190px;
+    height: auto;
+    max-height: 160px;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    border: 0.5px solid #C8A35F;
+}
+
+.about__inner-block img {
+    display: block;
+    width: 100%;
+    height: auto;
+    max-width: 190px;
+}
+
+.about__inner-digit {
+    margin: 15px 0 0 0;
+    font-family: Roboto, Arial, sans-serif;
+    font-size: 64px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 75px;
+    letter-spacing: 0.05em;
+    text-align: center;
+}
+
+.about__inner-title {
+    font-family: Roboto, Arial, sans-serif;
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 21px;
+    letter-spacing: 0.05em;
+    text-align: center;
+}
+
+.about__inner-subtitle {
+    font-family: Roboto, Arial, sans-serif;
+    font-size: 12px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 14px;
+    letter-spacing: 0;
+    text-align: center;
+    margin: 10px 0 0 0;
+}
+
+.map {
+    margin: 0;
+    background: url("./assets/img/map/01.png") no-repeat center;
+    background-size: 1920px;
+    height: 450px;
+}
+
+/* Footer */
+.footer {
+    background: #C8A35F;
+    padding: 50px 0;
+}
+
+.footer__row {
+    display: flex;
+    justify-content: space-between;
+}
+
+.footer__column {
+    flex-basis: 50%;
+    display: flex;
+    justify-content: space-between;
+}
+
+.footer__contact {
+    display: flex;
+    flex-direction: column;
+    color: white;
+    margin: 0 100px 0 0;
+    align-self: center;
+}
+
+.footer__address {
+    font-family: Roboto, Arial, sans-serif;
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 16px;
+    letter-spacing: 0;
+    text-align: left;
+
+}
+
+.footer__email {
+    color: black;
+    font-family: Roboto, Arial, sans-serif;
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 16px;
+    letter-spacing: 0;
+    text-align: left;
+
+}
+
+.footer__phones {
+    color: white;
+    display: flex;
+    flex-direction: column;
+}
+
+.footer__phone {
+    font-family: Roboto, Arial, sans-serif;
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 16px;
+    letter-spacing: 0;
+    text-align: left;
+
+}
+
+.footer__developed-by {
+    font-family: Roboto, Arial, sans-serif;
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 16px;
+    letter-spacing: 0;
+    text-align: right;
+    align-self: center;
+    text-decoration: underline;
+}
